# AddObserver

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  PRIVACY_POLICY.md  README.md  STARTER_PROMPT.md  TERMS.md  todo.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  supply-chain.yml
araştırılacak ürün/: contact form mesajı.txt  gelen mesaj  markalar
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260718_0001_initial_postgresql_schema.py  20260718_0002_enable_principal_rls.py  20260719_0003_authorization_code_bootstrap_rls.py  20260719_0004_token_bootstrap_rls.py  20260719_0005_web_session_bootstrap_rls.py  20260719_0006_credential_revocation_outbox.py  20260722_0007_append_only_audit.py
backend/src/: __init__.py  app.py  config.py
backend/src/api/: __init__.py  accounts.py  errors.py  identifiers.py  pagination.py  problems.py  queries.py  rate_limits.py  report_cursor.py  reporting.py  reporting_pagination.py  retry.py  routes.py
backend/src/approval/: __init__.py  application.py  domain.py  payload_schema.py  serialization.py
backend/src/auth/: __init__.py  approvals_routes.py  cimd.py  context.py  deps.py  disconnect.py  domain.py  google_oauth.py  revocation_worker.py  server.py  vault.py  web_session.py
backend/src/db/: __init__.py  connection.py  models.py  oauth_store.py  postgres.py  postgres_context.py  postgres_repository.py  postgres_uow.py  proposals.py  repository.py  schema.py  sqlalchemy_schema.py  web_session_store.py
backend/src/mcp/: __init__.py  auth_bridge.py  credentials.py  output_schemas.py  proposals.py  server.py  tool_support.py  tools.py
backend/src/observability/: __init__.py  logging.py  telemetry.py
backend/src/operations/: __init__.py  drills.py
backend/tests/: test_api_accounts.py  test_api_errors.py  test_api_http_routes.py  test_api_identifiers.py  test_api_pagination.py  test_api_problems.py  test_api_queries.py  test_api_rate_limits.py  test_api_report_cursor.py  test_api_reporting.py  test_api_retry.py  test_app_lifecycle.py  test_approval_application.py  test_approval_domain.py  test_approval_payload_schema.py  test_approval_serialization.py  test_approvals_http.py  test_auth_authorization_flow_http.py  test_auth_cimd.py  test_auth_disconnect.py  test_auth_domain.py  test_auth_server_http.py  test_auth_vault.py  test_auth_web_session.py  test_check_docs.py  test_db_proposals.py  test_db_repository.py  test_db_web_session_store.py  test_delivery_contracts.py  test_documentation.py  test_e2e_approvals_playwright.py  test_google_oauth.py  test_mcp_auth_bridge.py  test_mcp_credentials.py  test_mcp_integration.py  test_oauth_metadata_contract.py  test_oauth_store.py  test_observability.py  test_openapi_contract.py  test_operations_drills.py  (+17 more)
docs/: API_CONTRACTS.md  API_DESIGN.md  ARCHITECTURE.md  AUTH.md  CONNECTOR_SUBMISSION.md  DATABASE.md  DATA_MODEL.md  DEPLOYMENT.md  DESIGN.md  DOCUMENTATION.md  ERROR_HANDLING.md  GOOGLE_API_ACCESS.md  GOOGLE_SUBMISSION_EVIDENCE.md  LEGAL.md  LEGAL_OPERATIONS_RUNBOOK.md  LEGAL_REVIEW_PACKET.md  MCP.md  NOTIFICATIONS.md  OBSERVABILITY.md  OPERATIONS.md  PRODUCT.md  PRODUCTION_DATA_INVENTORY.md  RATE_LIMITS.md  REPOSITORY.md  SECURITY.md  SUBPROCESSORS.md  TESTING.md
docs/decisions/: 0001-backend-stack.md  0003-dev-tooling.md  README.md  (+6 more)
tools/: check_docs.py
