[project]
name = "addobserver-backend"
version = "0.1.0"
description = "Public, free Google Ads MCP connector backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.35",
    "cryptography>=43.0",
    "google-ads>=31.1.0",
    "mcp>=1.28.0",
]

# Test runner is stdlib `unittest` (docs/TESTING.md) -- `httpx` above already
# provides the ASGI transport FastAPI's TestClient needs, so no extra test-only
# dependency group exists yet. pytest/formatter/linter/type-checker selection is
# still an open question in docs/TESTING.md and is not resolved by this file.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
